# nyx-app

./: .gitignore  Cargo.toml  package-lock.json  package.json  vite.config.ts
crates/nix-core/: Cargo.toml
crates/nix-core/src/: lib.rs
crates/nix-core/src/db/: error.rs  manager.rs  mod.rs
crates/nix-core/src/models/: node.rs  root.rs
crates/nix-core/src/path/: resolver.rs
crates/nix-core/src/services/: mod.rs  node_service.rs  root_service.rs
crates/nyx-core/: Cargo.toml
server/nix-server/: Cargo.toml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  response.rs
src-tauri/src/command/: mod.rs  node.rs  root.rs
src/components/: Constants.tsx
src/components/elements/: DialogWindow.tsx  IconButton.tsx  ListItemsMain.tsx  Notification.tsx
src/components/items/: RootList.tsx
src/components/panels/: LeftPanel.tsx  MainPanel.tsx  MainWindow.tsx
src/store/: LeftPanelStore.tsx  NodeStore.tsx  NotificationStore.tsx  RootStore.tsx
src/styles/: colors.scss  elements.scss  fonts.scss  globals.scss  index.scss  panels.scss
src/styles/elements/: DialogWindow.scss  ListItemsMain.scss  Notification.scss
