[workspace]
members = [ "crates/nyx-core","src-tauri"]
resolver = "2"

[workspace.package]
name = "nyx-app"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7.7"
tokio = {version = "1.41.1", features = ["full"] }
