[package]
name = "nix-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nyx_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"


# Workspace dependencies
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
surrealdb = { workspace = true, features = ["kv-rocksdb"] }


# internal dependencies
nix-core = { path = "../crates/nix-core" }
